apps/header-inspection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: header-display
spec:
  selector:
    app: header-display
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
