apps/header-inspection/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny-egress"
spec:
  endpointSelector:
    matchLabels:
      app: header-display
  egress:
    - {} # This empty list puts the pod into "Default Deny" mode
